<resources>
    <string name="app_name">Baby Care</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="btn_welcom">Welcome</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_login">Log In</string>
    <string name="baby_information">Baby Information</string>
    <string name="logo">logo</string>
    <string name="name">Name</string>
    <string name="Weight">Weight</string>
    <string name="todo">TODO</string>
    <string name="length">Length</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="this_is_second_activity">This is Second activity</string>
    <string name="baby_care">Baby Care</string>
    <string-array name="genderlist">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="Doctor">Doctor</string>
    <string name="DoctorName">AhmedHawam</string>
    <string name="MoreDescription">Talkha , Mansoura .</string>
    <string name="Baby_sitter">BabySitter</string>
    <string name="Parent">Parent</string>
    <string name="invalide_name">Name is required</string>
    <string name="invalide_email">Please Enter Valid Email</string>
    <string name="invalide_password">Enter 6 digit password</string>
    <string name="user_information">User Information</string>


    <string-array name="Doctor">
        <item>Doctor</item>
        <item>Doctor</item>
        <item>Doctor</item>
        <item>Doctor</item>
        <item>Doctor</item>
    </string-array>

    <string-array name="DoctorName">
        <item>Ahmed Hawam</item>
        <item>Asmaa Ibrahim</item>
        <item>Diaa Magdy</item>
        <item>Mariam Eldoweny</item>
        <item>Nada Makram</item>
    </string-array>

    <string-array name="MoreDescription">
        <item>Mahllet Ziad , Mahallah .</item>
        <item>Batra , Mansoura .</item>
        <item>Gehan , Mansoura .</item>
        <item>Damietta , Damietta .</item>
        <item>Talkha , Mansoura .</item>
    </string-array>
    <string name="title_activity_add__doctor">Add_Doctor</string>
    <string name="Rate">Rate</string>
    <string name="Location">Location</string>
    <string name="Specialty">Specialty</string>

    <string name="what_s_on_your_mind">Enter your query</string>
    <string name="menu_refresh">Refresh</string>

    <string-array name="BabyName">
        <item>AHMED</item>
        <item>AMR</item>
        <item>All</item>
    </string-array>

    <string-array name="NameOfVaccination">
        <item>Vaccination1</item>
        <item>Vaccination2</item>
        <item>Vaccination3</item>
        <item>Vaccination4</item>
        <item>Vaccination5</item>
    </string-array>

    <string-array name="TypeOfVaccination">
        <item>Measles vaccine.</item>
        <item>rubella vaccine.</item>
        <item>Influenza vaccine.</item>
        <item>Human papillomavirus (HPV) vaccine.</item>
        <item>Diphtheria, tetanus, and pertussis (DTaP) vaccine.</item>
    </string-array>

    <string-array name="Date">
        <item>15May</item>
        <item>6June</item>
        <item>10October</item>
        <item>12March</item>
        <item>18September</item>
    </string-array>

    <string name="NameOfVaccination">Vaccination1</string>
    <string name="TypeOfVaccination">Measles vaccine.</string>
    <string name="Date">15May</string>
    <string name="BabyName">AHMED</string>

    <string name="dialog_message">Are you sure you want to delete this image?</string>
    <string name="dialog_title">Warning</string>

</resources>


