<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_gravity="center"
android:background="@color/tenttran"
tools:context=".Page1"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/tent"
    android:orientation="horizontal"
    >

    <TextView
        android:id="@+id/Rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textAlignment="center"
        android:fontFamily="@font/segoe_ui_bold"
        android:background="@color/DarkPink"
        android:shadowColor="#CC000000"
        android:shadowDx="4"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#fcdbdb"
        android:textSize="20dp"
        android:text="@string/Rate" />

    <TextView
        android:id="@+id/Location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textAlignment="center"
        android:fontFamily="@font/segoe_ui_bold"
        android:background="@color/colorControlActivated"
        android:shadowColor="#CC000000"
        android:shadowDx="4"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#fcdbdb"
        android:textSize="20dp"
        android:text="@string/Location" />

    <TextView
        android:id="@+id/Specialty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textAlignment="center"
        android:fontFamily="@font/segoe_ui_bold"
        android:background="@color/colorControlActivated"
        android:shadowColor="#CC000000"
        android:shadowDx="4"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#fcdbdb"
        android:textSize="20dp"
        android:text="@string/Specialty" />

</LinearLayout>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="620dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:layout_toLeftOf="@+id/menu"
                android:src="@drawable/fav"
                app:layout_constraintEnd_toStartOf="@+id/menu"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:layout_toLeftOf="@+id/menu"
                android:src="@drawable/fav"
                app:layout_constraintEnd_toStartOf="@+id/menu"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:layout_toLeftOf="@+id/menu"
                android:src="@drawable/fav"
                app:layout_constraintEnd_toStartOf="@+id/menu"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:layout_toLeftOf="@+id/menu"
                android:src="@drawable/fav"
                app:layout_constraintEnd_toStartOf="@+id/menu"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:layout_toLeftOf="@+id/menu"
                android:src="@drawable/fav"
                app:layout_constraintEnd_toStartOf="@+id/menu"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:layout_toLeftOf="@+id/menu"
                android:src="@drawable/fav"
                app:layout_constraintEnd_toStartOf="@+id/menu"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:layout_toLeftOf="@+id/menu"
                android:src="@drawable/fav"
                app:layout_constraintEnd_toStartOf="@+id/menu"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:layout_toLeftOf="@+id/menu"
                android:src="@drawable/fav"
                app:layout_constraintEnd_toStartOf="@+id/menu"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:layout_toLeftOf="@+id/menu"
                android:src="@drawable/fav"
                app:layout_constraintEnd_toStartOf="@+id/menu"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:layout_toLeftOf="@+id/menu"
                android:src="@drawable/fav"
                app:layout_constraintEnd_toStartOf="@+id/menu"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="15dp">

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:layout_toLeftOf="@+id/menu"
                android:src="@drawable/fav"
                app:layout_constraintEnd_toStartOf="@+id/menu"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:layout_toLeftOf="@+id/menu"
                android:src="@drawable/fav"
                app:layout_constraintEnd_toStartOf="@+id/menu"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:layout_toLeftOf="@+id/menu"
                android:src="@drawable/fav"
                app:layout_constraintEnd_toStartOf="@+id/menu"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:layout_toLeftOf="@+id/menu"
                android:src="@drawable/fav"
                app:layout_constraintEnd_toStartOf="@+id/menu"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:layout_toLeftOf="@+id/menu"
                android:src="@drawable/fav"
                app:layout_constraintEnd_toStartOf="@+id/menu"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>